# autonomous-mobile-robot

./: LICENSE  README.md
CAD/: Base_Plate.SLDPRT  lid for base.SLDPRT  lidar mount.SLDPRT  top mount.SLDPRT
amr_bringup/: package.xml  setup.py
amr_bringup/config/: slam.yaml
amr_bringup/launch/: amr.launch.py
amr_control/: package.xml  setup.cfg  setup.py
amr_control/amr_control/: diff_drive_odom.py  imu_sim.py  lidar_sim.py  wheel_encoder_sim.py
amr_control/config/: ekf.yaml
amr_control/launch/: ekf.launch.py
amr_description/: CMakeLists.txt  package.xml
amr_description/launch/: display.launch.py
amr_description/urdf/: amr.urdf.xacro
