<?xml version="1.0"?>
<package format="3">

  <name>amr_bringup</name>

  <version>1.0.0</version>

  <description>
    Bringup package for the Autonomous Mobile Robot (AMR).

    This package launches the complete robot software stack,
    including robot description, localization, sensor simulation,
    visualization and SLAM.
  </description>

  <maintainer email="reojames3378@gmail.com">
    Reo James
  </maintainer>

  <license>MIT</license>

  <!-- Build Tool -->

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime Dependencies -->

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <depend>amr_description</depend>
  <depend>amr_control</depend>

  <depend>robot_state_publisher</depend>
  <depend>robot_localization</depend>

  <depend>rviz2</depend>

  <depend>slam_toolbox</depend>

  <depend>xacro</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
