<?xml version="1.0"?>
<package format="3">

  <name>amr_description</name>

  <version>1.0.0</version>

  <description>
    Robot description package for the Autonomous Mobile Robot (AMR).
    Contains URDF/Xacro models, RViz launch files and robot visualization.
  </description>

  <maintainer email="reojames3378@gmail.com">
    Felix
  </maintainer>

  <license>MIT</license>

  <!-- Build Tool -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime Dependencies -->

  <exec_depend>xacro</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>

  <exec_depend>rviz2</exec_depend>

  <exec_depend>launch</exec_depend>

  <exec_depend>launch_ros</exec_depend>

  <!-- Export -->

  <export>

    <build_type>ament_cmake</build_type>

  </export>

</package>
